# vivi

./: .flake8  .git-blame-ignore-revs  .gitignore  .hgsub  .hgsubstate  .hgsvnexternals  .pre-commit-config.yaml  CHANGES.txt  LICENSE  README.rst  README.txt  ZO-5037.change  architecture.graphml  buildout.cfg  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  setup.py
core/: .coveragerc  .gitattributes  .gitignore  .hgignore  .hgsub  .hgsubstate  CHANGES.rst  CHANGES.txt  HISTORY.rst  HISTORY.txt  INSTALL.txt  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  architecture.graphml  boostrap-python.py  bootstrap.cfg  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.py
core/doc/: search.txt
core/doc/imp-user.graffle/: data.plist
core/docs/: WCM-533.change  WCM-574.change  layout.fix  towncrier-template  wcm1162.change
core/docs/changelog/: 5139.change  BEM-113.change  BEM-204.change  ENG-232.change  ENG-344.change  ENG-422.change  ENG-453.change  ENG-85.change  ES-145.change  ES-146_animation_videos.change  ES-172  ES-172_kilkaya_splittests.change  ES-196.change  ES-204.change  ES-275.change  ES-395_image_gradient_color.change  ES-423.change  ES-449.change  ES-488.change  ESP-28.fix  FIX_adjust-maintenance-hours-for-vg-wort  FIX_attach-span-celery.change  FIX_manual-audio-publish-not-working.change  FIX_publish-script-not-working.change  MAINT-20240902tb.change  MAINT-20240911tb.change  MAINT.change  OPS-1864.change  OPS-2385.change  OPS-2829.change  WCM-1003.change  WCM-1005.change  WCM-102.change  WCM-1021.change  WCM-1026.change  WCM-1032.change  WCM-1040_upload.change  WCM-1043.change  WCM-1044.change  WCM-1055_premium_audio_checkout.change  (+810 more)
core/images/: actionicons.xcf  actionpaneicons.xcf  assetmanagement.xcf  desktop-fileicons.xcf  desktop.xcf  icons.xcf
core/profiles/: base.cfg  connector.cfg  dev.cfg  offline.cfg  prod.cfg  python.cfg  zip5.cfg
core/skels/cms/: base.zcml  connector.zcml  principals.zcml.in  selenium.zcml  site.zcml  zope.conf.in
core/skels/connector/: connector.zcml
core/specification/: anmeldung.tex  desktop.tex  editor.tex  feeds.tex  kalender.tex  newsletter.tex  scenarios.tex  seitenleiste.tex  sitemap.graffle  webdav-cache-validierung.txt
core/src/zeit/: __init__.py  conftest.py  pytest.py
core/src/zeit/addcentral/: README.txt  add.py  configure.zcml  form.pt  ftesting.zcml  interfaces.py  resources.py  sidebar.pt  sidebar.py  testing.py
core/src/zeit/arbeit/: configure.zcml  ftesting.zcml  infobox.py  interfaces.py  jobbox_ticker.py  testing.py
core/src/zeit/authentication/: authentication.py  authentication.zcml  azure.py  configure.zcml  ftesting.zcml  oidc.py  testing.py  zcml.py
core/src/zeit/brightcove/: __init__.py  asset.py  asset.txt  browser.py  browser.txt  browser.zcml  checkout.py  checkout.txt  checkout.zcml  configure.zcml  connection.py  connection2.py  content.py  convert.py  convert2.py  converter.py  ftesting.zcml  integration.py  interfaces.py  reference.txt  repository.py  resolve.py  session.py  solr.py  testing.py  update.py  update2.py  video.py
core/src/zeit/calendar/: README.txt  calendar.py  calendar.txt  configure.zcml  event.py  ftesting.zcml  interfaces.py  test.py
core/src/zeit/campus/: article.py  article.txt  configure.zcml  ftesting.zcml  infobox.py  interfaces.py  testing.py
core/src/zeit/cmp/: configure.zcml  consent.py  ftesting.zcml  interfaces.py  source.py  testing.py
core/src/zeit/cms/: __init__.py  application.py  application.zcml  async.py  async.txt  bugsnag.py  celery.py  cleanup.py  cleanup.txt  cli.py  cmscontent.py  cmscontent.txt  config.py  configure.zcml  connector.py  connector.txt  content.txt  fluent.py  ftesting-securitypolicy.zcml  ftesting.zcml  full-profiling.txt  grok.py  history.py  i18n.py  integration.zcml  interfaces.py  logging.py  lxml.zcml  menu.zcml  meta.zcml  metrics.py  otel_patch.py  patches.zcml  pendulum_patch.py  permissions.zcml  principals-testing.zcml  profiling.zcml  redis_patch.py  relstorage.py  requests.py  (+23 more)
core/src/zeit/connector/: README-SMALL.txt  README.txt  cache.py  cache.txt  cli.py  configure.zcml  connector.py  connector.txt  content.py  converter.py  dav-connector.zcml  deprecated-test.py  filesystem-connector.zcml  filesystem.py  ftesting-content.zcml  ftesting-filesystem.zcml  ftesting-mock.zcml  ftesting-real.zcml  ftesting.zcml  full-profiling.txt  functional.txt  gcsemulator.py  interfaces.py  invalidation-events.txt  invalidator.py  invalidator.txt  lock.py  lockinfo.py  lockinfo.txt  locking.txt  longrunning.txt  ltree.py  migrations.py  mock-connector.zcml  mock.py  mock.txt  models.py  noncachingdav-connector.zcml  postgresql.py  profiling.txt  (+20 more)
core/src/zeit/content/: README.txt  __init__.py
core/src/zeit/contentquery/: configuration.py  configure.zcml  helper.py  interfaces.py  query.py
core/src/zeit/crop/: configure.zcml  crop.py  ftesting.zcml  interfaces.py  mask.py  source.py  store.py  testing.py
core/src/zeit/edit/: block.py  body.py  configure.zcml  container.py  editor.pt  ftesting.zcml  interfaces.py  meta.py  meta.zcml  rule.py  testing.py  undo.py
core/src/zeit/entitlements/: __init__.py  entitlements.py  ftesting.zcml  interfaces.py  testing.py
core/src/zeit/find/: README.txt  __init__.py  cli.py  configure.zcml  daterange.py  elastic.py  ftesting.zcml  interfaces.py  lucenequery.py  lucenequery.txt  search.py  test.py  testing.py  tests.py
core/src/zeit/ghost/: README.txt  configure.zcml  ftesting.zcml  ghost.py  interfaces.py  test.py  testing.py  tests.py
core/src/zeit/imp/: __init__.py  colors.xml  configure.zcml  crop.py  ftesting.zcml  interfaces.py  mask.py  scales.xml  source.py  store.py  test.py  tests.py
core/src/zeit/invalidate/: README.txt  configure.zcml  ftesting.zcml  invalidate.py  test.py  testing.py  tests.py
core/src/zeit/kilkaya/: configure.zcml  connection.py  interfaces.py  json.py  testing.py  testing.zcml
core/src/zeit/kpi/: bigquery.py  configure.zcml  ctesting.zcml  ftesting-bigquery.zcml  ftesting.zcml  (+3 more)
(+3701 files in other folders)
