[project]
name = "vivi.core"
authors = [{ name = "Zeit Online", email = "zon-backend@zeit.de" }]
dynamic = ["version"]

dependencies = [
    "beautifulsoup4",
    "btrees",
    "bugsnag",
    "collective.monkeypatcher",
    "commentjson",
    "cryptography",  # so pyjwt can offer rsa
    "elasticsearch >=7.16.0, <8.0.0",
    "filetype",
    "gocept.cache >= 2.1",
    "gocept.form[formlib]>=0.7.5",  # XXX Should be [ui], but is entrenched
    "gocept.lxml>=0.2.1",
    "gocept.runner>0.5.3",
    "google-cloud-storage>=2.1.0.dev0",
    "grokcore.component",
    "jinja2 >= 2.11.0.dev0",
    "lxml==4.2.3",  # ZO-859
    "markdown",
    "markdownify",
    "martian",
    "openapi-schema-validator",
    "opentelemetry-api",
    "opentelemetry-api>=1.11.1",
    "opentelemetry-instrumentation-sqlalchemy>=0.38b0",
    "pendulum>=2.0.0.dev0",
    "persistent",
    "pillow",
    "prometheus-client",
    "pyjwt>=2.0.0",
    "pyramid_dogpile_cache2",
    "pytz",
    "pyyaml",
    "requests",
    "requests_file",
    "sqlalchemy>=2.0.0.dev0",
    "transaction",
    "tweepy>=4.5.0",
    "webob",
    "werkzeug",
    "z3c.celery >= 1.2.0.dev0",  # XXX Should be [ui], but is entrenched
    "z3c.traverser",  # XXX Should be [ui], but is entrenched
    "zc.form",  # Should be [ui], but it also contains schema fields
    "zc.queue",
    "zc.relation",
    "zc.set",
    "zc.sourcefactory",
    "zodb",
    "zodburi",
    "zope.annotation",
    "zope.app.appsetup",
    "zope.app.file",
    "zope.app.folder",
    "zope.app.keyreference",
    "zope.app.locking",
    "zope.app.security",
    "zope.cachedescriptors",
    "zope.component",
    "zope.container>=3.8.1",
    "zope.copypastemove",
    "zope.deferredimport",  # undeclared by zc.form
    "zope.dottedname",
    "zope.dublincore",
    "zope.event",
    "zope.exceptions",
    "zope.file",
    "zope.generations",
    "zope.i18n>3.4.0",
    "zope.index",
    "zope.interface",
    "zope.lifecycleevent",
    "zope.location>=3.4.0b2",
    "zope.principalannotation",  # XXX Should be [ui], but ZODB contains persistent objects
    "zope.proxy",
    "zope.publisher >= 6.0.0.dev0",  # XXX Should be [ui], but is entrenched
    "zope.schema",
    "zope.security",
    "zope.securitypolicy",
    "zope.site",
    "zope.sqlalchemy",
    "zope.traversing",  # XXX Should be [ui], but is entrenched
    "zope.xmlpickle",
]

[project.optional-dependencies]
ui = [
    "celery >= 4.0",
    "celery_longterm_scheduler",
    "celery_redis_sync",
    "cssutils",
    "docutils",
    "fanstatic",
    "gocept.fckeditor[fanstatic]",
    "gocept.pagelet",
    "guppy3",
    "js.backbone",
    "js.cropper",
    "js.handlebars",
    "js.jquery",
    "js.jqueryui",
    "js.mochikit",
    "js.select2",
    "js.underscore",
    "js.vanderlee_colorpicker",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-celery",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-wsgi",
    "pygments",
    "pypandoc",
    "redis",
    "repoze.vhm",
    "z3c.flashmessage",
    "z3c.menu.simple>=0.5.1",
    "z3c.noop",
    "zc.datetimewidget",
    "zc.table",
    "zconfig",
    "zeep",
    "zope.app.authentication",
    "zope.app.basicskin",  # undeclared by zope.app.preference
    "zope.app.container",
    "zope.app.exception",
    "zope.app.form>=3.6.0",
    "zope.app.pagetemplate",
    "zope.app.preference",
    "zope.app.principalannotation",
    "zope.app.publication",
    "zope.app.publisher",
    "zope.app.tree",
    "zope.app.wsgi",
    "zope.authentication",
    "zope.browser",
    "zope.browserpage",
    "zope.componentvocabulary",
    "zope.configuration",
    "zope.error",
    "zope.formlib",
    "zope.login",
    "zope.pluggableauth",
    "zope.session",
    "zope.viewlet",
]

test = [
    "celery >= 5.0",
    "celery_longterm_scheduler",
    "cssselect",
    "docker",
    "gcp-storage-emulator",
    "gocept.httpserverlayer>=1.4.0.dev0",
    "gocept.jasmine",
    "gocept.jslint>=0.2",
    "gocept.pytestlayer",
    "gocept.selenium<7.1",
    "gocept.testing>=1.4.0.dev0",
    "hvac",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "packaging",
    "plone.testing[zca,zodb]",
    "pygraphviz",  # to render linesman results
    "pytest",
    "pytest-cov",
    "pytest-remove-stale-bytecode",
    "pytest-rerunfailures",
    "pytest-xdist",
    "requests-mock",
    "selenium<4",  # ZO-681
    "waitress",
    "webtest",
    "xlrd",
    "xmldiff",
    "zope.app.wsgi",
    "zope.configuration",
    "zope.error",
    "zope.testbrowser",
    "zope.testing>=3.8.0",
]

deploy = [
    "celery_redis_prometheus",
    "flower",
    "fluent-logger",
    "grpcio-status",  # warning instead of required by google-api-core
    "gunicorn",
    "gunicorn_environmentconfig",
    "gunicorn_worker_healthcheck",
    "linesman",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "pastescript",
    "psycopg2-binary",
    "python-json-logger",
    "repoze.vhm",
    "slowlog",
    "waitress",
    "zeit.ldap",
    "zeit.newsimport",
]

zon = [
    "gocept.form==0.8.0+py3",
    "gocept.lxml==0.3.0+py3.1",  # https://github.com/ZeitOnline/gocept.lxml/tree/py3
    "zope.app.locking==3.5.0+py3.1",
    "zope.xmlpickle==4.0.0+py3k1",  # https://github.com/ZeitOnline/zope.xmlpickle/tree/py3
    # We created our own py310 wheels on devpi.zeit.de for these:
    # lxml==4.2.3  # ZO-1328
    # perfmetrics==3.2.0.post0  # ZO-1577
    # zope.interface==5.4.0  # ZO-1580
    # zope.hookable==5.1.0   # ZO-1580
]
deploy-zon = [
    "linesman==0.3.2+py3.3",
    "slowlog==0.9+py3.2",
]
test-zon = [
    "gocept.jasmine==0.7+py3.2",
]
ui-zon = [
    "gocept.fckeditor==2.6.4.1.post3+py3.3",  # https://github.com/ZeitOnline/gocept.fckeditor/tree/py3
    "gocept.mochikit==1.4.2.5+py3",
    "js.jqueryui==1.10.3+tooltip",
    "z3c.noop==1.0+py3.2",  # https://github.com/ZeitOnline/z3c.noop
    "z3c.menu.simple==0.6.0+py3.3",
    "zc.datetimewidget==0.8.0+py3.2",
]

[project.scripts]
author-report-invalid-gcid = "zeit.content.author.honorar:report_invalid_gcid"
brightcove-import-playlists = "zeit.brightcove.update:import_playlists"
clean-objectlog = "zeit.objectlog.objectlog:clean"
change-volume-access = "zeit.content.volume.volume:change_access"
dump_references = "zeit.cms.relation.migrate:dump_references"
load_references = "zeit.cms.relation.migrate:load_references"
dav-cache-clear = "zeit.connector.invalidator:invalidate_whole_cache"
dav-cache-sweep = "zeit.connector.cache:sweep"
set-properties = "zeit.connector.restore:set_props_from_file"
ingredients-collect-used = "zeit.wochenmarkt.ingredients:collect_used"
retract-overdue-timebased = "zeit.workflow.timebased:retract_overdue_objects"
external-javascript-sweep = "zeit.sourcepoint.connection:sweep"
external-javascript-update = "zeit.sourcepoint.connection:update"
search-elastic = "zeit.find.cli:search_elastic"
update-topiclist = "zeit.retresco.connection:update_topiclist"
tms-reindex-object = "zeit.retresco.update:reindex"
facebook-access-token = "zeit.push.facebook:create_access_token"
twitter-access-token = "zeit.push.twitter:create_access_token"
ua-payload-doc = "zeit.push.urbanairship:print_payload_documentation"
vgwort-order-tokens = "zeit.vgwort.token:order_tokens"
vgwort-report = "zeit.vgwort.report:report_new_documents"
vivi-metrics = "zeit.retresco.metrics:collect"
zopeshell = "zeit.cms.cli:zope_shell"

[project.entry-points."fanstatic.libraries"]
zeit_addcentral = "zeit.addcentral.resources:lib"
zeit_campus = "zeit.campus.browser.resources:lib"
zeit_cmp = "zeit.cmp.browser.resources:lib"

zeit_cms = "zeit.cms.browser.resources:lib_css"
zeit_cms_js = "zeit.cms.browser.resources:lib_js"
zeit_cms_content = "zeit.cms.content.browser.resources:lib"
zeit_cms_workingcopy = "zeit.cms.workingcopy.browser.resources:lib"
zeit_cms_tagging = "zeit.cms.tagging.browser.resources:lib"
zeit_cms_clipboard = "zeit.cms.clipboard.browser.resources:lib"

zeit_content_article = "zeit.content.article.edit.browser.resources:lib"
zeit_content_article_recension = "zeit.content.article.browser.resources:lib"
zeit_content_author = "zeit.content.author.browser.resources:lib"
zeit_content_cp = "zeit.content.cp.browser.resources:lib"
zeit_content_gallery = "zeit.content.gallery.browser.resources:lib"
zeit_content_image = "zeit.content.image.browser.resources:lib"
zeit_content_link = "zeit.content.link.browser.resources:lib"
zeit_content_volume = "zeit.content.volume.browser.resources:lib"

zeit_edit = "zeit.edit.browser.resources:lib_css"
zeit_edit_js = "zeit.edit.browser.resources:lib_js"
zeit_find = "zeit.find.browser.resources:lib"
zeit_crop = "zeit.crop.browser.resources:lib"
zeit_push = "zeit.push.browser.resources:lib"
zeit_seo = "zeit.seo.browser.resources:lib"
zeit_wochenmarkt = "zeit.wochenmarkt.browser.resources:lib"
zeit_workflow = "zeit.workflow.browser.resources:lib"
zeit_wysiwyg = "zeit.wysiwyg.browser.resources:lib"

zc_table = "zeit.cms.browser.resources:zc_table"
zc_datetimewidget = "zeit.cms.browser.resources:zc_datetimewidget"

[project.entry-points.pytest11]
zeit_vivi = "zeit.pytest"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zeit/cms/__init__.py"

[tool.hatch.build]
only-include = ["src"]
exclude = [
    "src/zeit/connector/testcontent/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zeit"]
strict-naming = false  # required for proper output filename
[tool.hatch.build.targets.sdist]
strict-naming = false  # required for proper output filename


[tool.towncrier]
directory = "docs/changelog/"
filename = "CHANGES.txt"
# Our changelog file already has a title
title_format = ""
# First underline is used for version/date header.
# Second underline is used for the type names (like 'Bug fixes:').
underlines = ["-", ""]

template = "docs/towncrier-template"

[[tool.towncrier.type]]
directory = "change"
name = "Issues"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "FIX:"
showcontent = true

[[tool.towncrier.type]]
directory = "maint"
name = "MAINT:"
showcontent = true
