[project]
name = "vivi.core"
authors = [{ name = "Zeit Online", email = "zon-backend@zeit.de" }]
dynamic = ["version"]

dependencies = [
    "beautifulsoup4",
    "btrees",
    "bugsnag",
    "collective.monkeypatcher",
    "commentjson",
    "cryptography",  # so pyjwt can offer rsa
    "elasticsearch >=7.16.0, <8.0.0",  # ZO-2516
    "filetype",
    "gocept.cache >= 2.1",
    "gocept.form[formlib]>=0.7.5",  # XXX Should be [ui], but is entrenched
    "gocept.runner>0.5.3",
    "google-cloud-storage>=2.1.0.dev0",
    "grokcore.component",
    "jinja2 >= 2.11.0.dev0",
    "lxml",
    "lxml-html-clean",
    "markdown",
    "markdownify",
    "martian",
    "openapi-schema-validator>=0.6.0.dev0",
    "opentelemetry-api>=1.23.0.dev.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.38b0",
    "pendulum>=3.0.0.dev0",
    "persistent",
    "pillow",
    "prometheus-client",
    "pyjwt>=2.0.0",
    "pyramid_dogpile_cache2",
    "pytz",
    "pyyaml",
    "requests",
    "requests_file",
    "sqlalchemy>=2.0.0.dev0",
    "sqlalchemy-utils",
    "transaction",
    "webob",
    "werkzeug",
    "z3c.celery >= 1.2.0.dev0",  # XXX Should be [ui], but is entrenched
    "z3c.traverser",  # XXX Should be [ui], but is entrenched
    "zc.form",  # Should be [ui], but it also contains schema fields
    "zc.queue",
    "zc.relation",
    "zc.set",
    "zc.sourcefactory",
    "zodb",
    "zodburi",
    "zope.annotation",
    "zope.app.appsetup",
    "zope.app.file",
    "zope.app.folder",
    "zope.app.keyreference",
    "zope.app.locking",
    "zope.app.security",
    "zope.cachedescriptors",
    "zope.component",
    "zope.container>=3.8.1",
    "zope.copypastemove",
    "zope.deferredimport",  # undeclared by zc.form
    "zope.dottedname",
    "zope.event",
    "zope.exceptions",
    "zope.file",
    "zope.generations",
    "zope.i18n>3.4.0",
    "zope.index",
    "zope.interface",
    "zope.lifecycleevent",
    "zope.location>=3.4.0b2",
    "zope.principalannotation",  # XXX Should be [ui], but ZODB contains persistent objects
    "zope.proxy",
    "zope.publisher >= 6.0.0.dev0",  # XXX Should be [ui], but is entrenched
    "zope.schema",
    "zope.security",
    "zope.securitypolicy",
    "zope.site",
    "zope.sqlalchemy",
    "zope.traversing",  # XXX Should be [ui], but is entrenched
    "zope.xmlpickle",
]

[project.optional-dependencies]
ui = [
    "celery >= 4.0",
    "celery_longterm_scheduler",
    "celery_redis_sync",
    "cssutils",
    "docutils",
    "fanstatic",
    "gocept.fckeditor[fanstatic]",
    "gocept.pagelet",
    "js.backbone",
    "js.cropper",
    "js.handlebars",
    "js.jquery",
    "js.jqueryui",
    "js.mochikit",
    "js.select2",
    "js.underscore",
    "js.vanderlee_colorpicker",
    "lxml",
    "lxml_html_clean",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-celery",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-wsgi",
    "pygments",
    "pypandoc",
    "redis",
    "repoze.vhm",
    "z3c.flashmessage",
    "z3c.menu.simple>=0.5.1",
    "z3c.noop",
    "zc.datetimewidget",
    "zc.table",
    "zconfig",
    "zeep",
    "zope.app.authentication",
    "zope.app.basicskin",  # undeclared by zope.app.preference
    "zope.app.container",
    "zope.app.exception",
    "zope.app.form>=3.6.0",
    "zope.app.locales",
    "zope.app.pagetemplate",
    "zope.app.preference",
    "zope.app.principalannotation",
    "zope.app.publication",
    "zope.app.publisher",
    "zope.app.tree",
    "zope.app.wsgi",
    "zope.authentication",
    "zope.browser",
    "zope.browserpage",
    "zope.componentvocabulary",
    "zope.configuration",
    "zope.error",
    "zope.formlib",
    "zope.login",
    "zope.pluggableauth",
    "zope.session",
    "zope.viewlet",
]

test = [
    "celery >= 5.0",
    "celery_longterm_scheduler",
    "cssselect",
    "docker",
    "gcp-storage-emulator",
    "gocept.httpserverlayer>=1.4.0.dev0",
    "gocept.jasmine",
    "gocept.jslint>=0.2",
    "gocept.selenium<7.1",  # ZO-3157
    "gocept.testing>=1.4.0.dev0",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "packaging",
    "plone.testing[zca,zodb]",
    "pygraphviz",  # to render linesman results
    "pytest",
    "pytest-cov",
    "pytest-remove-stale-bytecode",
    "pytest-rerunfailures",
    "pytest-xdist",
    "requests-mock",
    "selenium<4",  # ZO-3157
    "time-machine",
    "waitress",
    "webtest",
    "xlrd",
    "xmldiff",
    "zope.app.wsgi",
    "zope.configuration",
    "zope.error",
    "zope.pytestlayer",
    "zope.testbrowser",
    "zope.testing>=3.8.0",
]

deploy = [
    "celery-redis-prometheus>=1.5.0.dev0",
    "flower",
    "fluent-logger",
    "grpcio-status",  # warning instead of required by google-api-core
    "gunicorn",
    "gunicorn_environmentconfig",
    "gunicorn_worker_healthcheck",
    "linesman",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "opentelemetry-sdk-extension-prometheus-multiprocess",
    "pastescript",
    "psycopg2-binary",
    "python-json-logger",
    "relstorage",
    "repoze.vhm",
    "slowlog",
    "waitress",
    "zeit.ldap",
]

zon = [
    "gocept.form==0.8.0+py3",
    "zope.app.locking==3.5.0+py3.1",
    "zope.xmlpickle==4.0.0+py3k1",  # https://github.com/ZeitOnline/zope.xmlpickle/tree/py3
    # We created our own py310 wheels on devpi.zeit.de for these:
    # lxml==4.2.3  # ZO-1328
    # perfmetrics==3.2.0.post0  # ZO-1577
    # zope.interface==5.4.0  # ZO-1580
    # zope.hookable==5.1.0   # ZO-1580
]
deploy-zon = [
    "linesman==0.3.2+py3.4",
    "slowlog==0.9+py3.2",
]
test-zon = [
    "gocept.jasmine==0.7+py3.2",
]
ui-zon = [
    "gocept.fckeditor==2.6.4.1.post3+py3.3",  # https://github.com/ZeitOnline/gocept.fckeditor/tree/py3
    "gocept.mochikit==1.4.2.5+py3",
    "js.jqueryui==1.10.3+tooltip",
    "z3c.noop==1.0+py3.2",  # https://github.com/ZeitOnline/z3c.noop
    "z3c.menu.simple==0.6.0+py3.3",
    "zc.datetimewidget==0.8.0+py3.2",
]

[project.scripts]
author-report-invalid-gcid = "zeit.content.author.honorar:report_invalid_gcid"
change-volume-access = "zeit.content.volume.volume:change_access"
clean-objectlog = "zeit.objectlog.objectlog:clean"
dav-cache-sweep = "zeit.connector.cache:sweep"
delete-content = "zeit.cms.content.cli:delete_content"
delete-content-from-tms-indexes = "zeit.retresco.cli:delete_content_from_tms_indexes"
dump_references = "zeit.cms.relation.migrate:dump_references"
external-javascript-sweep = "zeit.sourcepoint.connection:sweep"
external-javascript-update = "zeit.sourcepoint.connection:update"
import-dpa-news-api = "zeit.newsimport.cli:import_dpa_news_api"
export-import-clipboards = "zeit.cms.clipboard.cli:export_import"
export-import-objectlogs = "zeit.objectlog.cli:export_import"
export-import-permissions = "zeit.securitypolicy.cli:export_import"
export-import-workingcopy = "zeit.cms.workingcopy.cli:export_import"
ingredients-collect-used = "zeit.wochenmarkt.ingredients:collect_used"
load_references = "zeit.cms.relation.migrate:load_references"
prewarm-cache = "zeit.connector.cli:prewarm_cache"
provide-interface = "zeit.cms.cli:provide_interface"
publish-content = "zeit.cms.workflow.cli:publish"
refresh-cache = "zeit.connector.cli:refresh_cache"
retract-content = "zeit.cms.workflow.cli:retract"
retract-overdue-timebased = "zeit.workflow.timebased:retract_overdue_objects"
search-elastic = "zeit.find.cli:search_elastic"
set-properties = "zeit.connector.restore:set_props_from_file"
tms-reindex-object = "zeit.retresco.update:reindex"
ua-payload-doc = "zeit.push.urbanairship:print_payload_documentation"
unlock-overdue-locks = "zeit.connector.postgresql:unlock_overdue_locks"
update-topiclist = "zeit.retresco.connection:update_topiclist"
vgwort-bulk-report = "zeit.vgwort.cli:bulk_report"
vgwort-order-tokens = "zeit.vgwort.token:order_tokens"
vgwort-report = "zeit.vgwort.report:report_new_documents"
vivi-config-history = "zeit.cms.history:main"
vivi-metrics = "zeit.retresco.metrics:collect"
vivi-zodbpack = "zeit.cms.relstorage:zodbpack"
zopeshell = "zeit.cms.cli:zope_shell"

[project.entry-points."fanstatic.libraries"]
zeit_addcentral = "zeit.addcentral.resources:lib"
zeit_campus = "zeit.campus.browser.resources:lib"
zeit_cmp = "zeit.cmp.browser.resources:lib"

zeit_cms = "zeit.cms.browser.resources:lib_css"
zeit_cms_js = "zeit.cms.browser.resources:lib_js"
zeit_cms_content = "zeit.cms.content.browser.resources:lib"
zeit_cms_workingcopy = "zeit.cms.workingcopy.browser.resources:lib"
zeit_cms_tagging = "zeit.cms.tagging.browser.resources:lib"
zeit_cms_clipboard = "zeit.cms.clipboard.browser.resources:lib"

zeit_content_article = "zeit.content.article.edit.browser.resources:lib"
zeit_content_article_recension = "zeit.content.article.browser.resources:lib"
zeit_content_author = "zeit.content.author.browser.resources:lib"
zeit_content_cp = "zeit.content.cp.browser.resources:lib"
zeit_content_gallery = "zeit.content.gallery.browser.resources:lib"
zeit_content_image = "zeit.content.image.browser.resources:lib"
zeit_content_link = "zeit.content.link.browser.resources:lib"
zeit_content_volume = "zeit.content.volume.browser.resources:lib"

zeit_edit = "zeit.edit.browser.resources:lib_css"
zeit_edit_js = "zeit.edit.browser.resources:lib_js"
zeit_find = "zeit.find.browser.resources:lib"
zeit_crop = "zeit.crop.browser.resources:lib"
zeit_push = "zeit.push.browser.resources:lib"
zeit_seo = "zeit.seo.browser.resources:lib"
zeit_wochenmarkt = "zeit.wochenmarkt.browser.resources:lib"
zeit_workflow = "zeit.workflow.browser.resources:lib"
zeit_wysiwyg = "zeit.wysiwyg.browser.resources:lib"

zc_table = "zeit.cms.browser.resources:zc_table"
zc_datetimewidget = "zeit.cms.browser.resources:zc_datetimewidget"

[project.entry-points.pytest11]
zeit_vivi = "zeit.pytest"

[project.entry-points."zodburi.resolvers"]
psql = "zeit.cms.relstorage:psql_resolver"
pgsock = "zeit.cms.relstorage:socket_resolver"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zeit/cms/__init__.py"

[tool.hatch.build]
only-include = ["src"]
exclude = [
    "src/zeit/connector/testcontent/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zeit"]
strict-naming = false  # required for proper output filename
[tool.hatch.build.targets.sdist]
strict-naming = false  # required for proper output filename


[tool.towncrier]
directory = "docs/changelog/"
filename = "CHANGES.rst"
# Our changelog file already has a title
title_format = ""
# First underline is used for version/date header.
# Second underline is used for the type names (like 'Bug fixes:').
underlines = ["-", ""]

template = "docs/towncrier-template"

[[tool.towncrier.type]]
directory = "change"
name = "Issues"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "FIX:"
showcontent = true

[[tool.towncrier.type]]
directory = "maint"
name = "MAINT:"
showcontent = true
